[package]
name = "project_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.4"
json = { version = "0.12.4" }
walkdir = "2"
