[package]
name = "project_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0.4"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
winreg = "0.52.0"
walkdir = "2.4.0"
